# deezer-dl-bot

./: .gitignore  README.md  pyproject.toml
src/: config.py  deezerclient.py  jellyfinclient.py  jellyfinutils.py  main.py
