[project]
name = "deezer-dl-bot"
description = "Deezer-DL Bot for Jellyfin"
readme = "README.md"
version = "0.1.1"
dependencies = [
  "deezer_dl @ git+https://git@github.com/MaximeSahuc/deezer-dl",
  "pyyaml",
]
authors = [
  {name = "Maxime Sahuc"},
]

[project.urls]
Repository = "https://github.com/MaximeSahuc/deezer-dl-bot.git"

[project.scripts]
deezer-dl-bot = "main:main"